# SplineLib

./: CMakeLists.txt  README.md  SplineLib  license
examples/: example.cpp
include/: bezier_spline.h  cubic_spline.h  spline.h
src/: ReferenceBezierCubic.cpp  bezier_spline.cpp  cubic_spline.cpp  main.cpp  spline.cpp
